--- a/src/Componenet/Homestyle.css
+++ b/src/Componenet/Homestyle.css
@@ -8,52 +8,70 @@
     top: 50%;
     left: 25%;
     transform: translate(-50%, -50%);
-    color: rgb(222,221,225);
-    font-size:5vh;
+    color: rgb(137, 136, 143);
+    font-size: 10vh;
     font-weight: bold;
     text-align: left;
-    padding: 10vh;
+    padding: 5vh;
   }
-  .cls-button{
+  
+  /* Responsive Styles */
+  @media (max-width: 768px) {
+    .text-overlay {
+      font-size: 6vh;
+      padding: 3vh;
+      top: 40%;
+      left: 50%;
+      transform: translate(-50%, -40%);
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .text-overlay {
+      font-size: 5vh;
+      padding: 2vh;
+      top: 30%;
+      left: 50%;
+      transform: translate(-50%, -30%);
+    }
+  }
+  
+  .cls-button {
     background-color: aliceblue;
     color: black;
-    font-size:20px;
+    font-size: 20px;
     border: none;
     margin-left: 20px;
   }
+  
+  /* Responsive Styles */
+  @media (max-width: 768px) {
+    .cls-button {
+      font-size: 18px;
+      margin-left: 10px;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .cls-button {
+      font-size: 10px;
+      margin-left: 5px;
+    }
+  }
+  
+  
+  
+  
+  
+  
+  
   
   .cls-button:hover {
     background-color: rgba(27, 26, 26, 0.9);
     color: white;
   }
   
-  .responsive-text {
-    font-size: 15px; /* Default font size for smaller screens */
-    @media (min-width: 400px) {
-        
-        font-size: 26px;
-      }
-  
-    @media (min-width: 576px) {
-      
-      font-size: 34px;
-    }
-  
-    @media (min-width: 768px) {
-     
-      font-size: 32px;
-    }
-    @media (min-width: 576px) {
-        /* For screens with minimum width of 576px and larger */
-        font-size: 24px;
-      }
-      @media (min-width: 576px) {
-        /* For screens with minimum width of 576px and larger */
-        font-size: 24px;
-      }
-  
- 
-  }
+
   
   .div-m-2{
     padding: 5vh;
@@ -94,7 +112,7 @@
   
 .card-image1 {
  
-  width: 100%;
+  /* width: 100%; */
   height: auto;
   transition: transform 0.3s ease;
 }
@@ -225,3 +243,15 @@
           margin-Bottom: 10px;
            padding: 5px
       }
+      .bg {
+        background-image: url('https://img.freepik.com/free-vector/realistic-fog-background_23-2149115272.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+      /* .bgg{
+     background-image: url("https://images.freeimages.com/images/large-previews/de4/my-red-shoe-1197221.jpg");
+     background-repeat: no-repeat;
+     background-size: cover;
+   height: 100vh  ;
+    
+    } */
